--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Static Website - Shikhastaticwebsite</h1>
+        <h1>Welcome to My Static Website - Shikha</h1>
     </header>
 
     <nav>
